--- a/css/style.css
+++ b/css/style.css
@@ -17,4 +17,64 @@ body {
   width: 600px;
   background-color: #fff;
   box-shadow: 0 0 10px #000;
+}
+
+.top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 200px;
+  color: #fff;
+  background-color: #00BA40;
+  text-transform: uppercase;
+}
+.top p {
+  margin-top: 10px;
+}
+
+.bottom {
+  padding: 40px 20px;
+}
+.bottom label {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 22px;
+}
+.bottom input, .bottom select {
+  margin-bottom: 25px;
+  padding: 8px 10px;
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid rgb(185, 185, 185);
+}
+.bottom .count {
+  display: block;
+  margin: 20px auto;
+  padding: 10px 20px;
+  width: 60%;
+  border-radius: 8px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #00BA40;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.bottom .count:hover {
+  background-color: rgb(0, 168, 59);
+}
+.bottom .cost-info {
+  display: none;
+  margin-top: 30px;
+  font-size: 20px;
+}
+.bottom .cost {
+  font-weight: bold;
+}
+.bottom .error {
+  font-size: 18px;
+  color: rgb(199, 63, 29);
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
